--- a/package.json
+++ b/package.json
@@ -4,8 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": { 
-    "start": "node index.js",
-    "build": "AWS_LAMBDA_FUNCTION_NAME=true node index.js"
+    "start": "node index.js"
   },
   "author": "",
   "license": "ISC",
