--- a/package.json
+++ b/package.json
@@ -3,15 +3,15 @@
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
-  "scripts": { 
+  "scripts": {
     "start": "node index.js"
   },
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "download-chromium": "^2.2.1",
-    "puppeteer": "^10.2.0",
     "chrome-aws-lambda": "8.0.2",
+    "download-chromium": "^2.2.1",
+    "express": "^4.17.1",
     "puppeteer-core": "8.0.0"
   }
 }
