--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "chrome-aws-lambda": "10.1.0",
     "express": "^4.17.1",
+    "puppeteer": "^10.2.0",
     "puppeteer-core": "10.2.0"
   }
 }
