--- a/package.json
+++ b/package.json
@@ -9,9 +9,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "chrome-aws-lambda": "10.1.0",
     "express": "^4.17.1",
-    "puppeteer": "^10.2.0",
-    "puppeteer-core": "10.2.0"
+    "puppeteer": "^10.2.0"
   }
 }
