--- a/package.json
+++ b/package.json
@@ -8,9 +8,10 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "express": "^4.17.1",
     "puppeteer": "^2.1.1"
   },
   "engines": {
-   "node": "12.11.1"
-   }
+    "node": "12.11.1"
+  }
 }
