--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
   "license": "ISC",
   "dependencies": {
     "express": "^4.17.1",
-    "puppeteer": "^2.1.1"
+    "puppeteer": "^2.1.1",
+    "firebase": "^7.19.0"
   },
   "engines": {
     "node": "12.11.1"
