--- a/package.json
+++ b/package.json
@@ -8,9 +8,10 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "expo-server-sdk": "^3.6.0",
     "express": "^4.17.1",
-    "puppeteer": "^2.1.1",
-    "firebase": "^7.19.0"
+    "firebase": "^7.19.0",
+    "puppeteer": "^2.1.1"
   },
   "engines": {
     "node": "12.11.1"
