--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
     "expo-server-sdk": "^3.6.0",
     "express": "^4.17.1",
     "firebase": "^7.19.0",
-    "puppeteer": "^13.0.1"
+    "puppeteer": "^13.0.1",
+    "puppeteer-table-parser": "^1.7.0"
   },
   "engines": {
     "node": "12.11.1"
